compiler-core/src/javascript/tests/snapshots/gleam_core__javascript__tests__bit_arrays__match_sized_little_endian_signed.snap
---
source: compiler-core/src/javascript/tests/bit_arrays.rs
assertion_line: 379
expression: "\nfn go(x) {\n  let assert <<a:16-little-signed>> = x\n}\n"
---
import { makeError } from "../gleam.mjs";

function go(x) {
  if (!(x.length == 2)) {
    throw makeError(
      "let_assert",
      "my/mod",
      3,
      "go",
      "Pattern match failed, no pattern matched the value.",
      { value: x }
    )
  }
  let a = x.intFromSlice(0, 2, false, true);
  return x;
}
