compiler-core/src/javascript/tests/snapshots/gleam_core__javascript__tests__bit_arrays__mul_binds_tighter_than_add_in_pattern_size.snap
---
source: compiler-core/src/javascript/tests/bit_arrays.rs
expression: "\npub fn main() {\n  let a = 10\n  let b = 3\n  let c = 2\n  let assert <<_:bytes-size(a + b * c)>> = <<>>\n}\n"
---
----- SOURCE CODE

pub fn main() {
  let a = 10
  let b = 3
  let c = 2
  let assert <<_:bytes-size(a + b * c)>> = <<>>
}


----- COMPILED JAVASCRIPT
import { makeError, toBitArray } from "../gleam.mjs";

const FILEPATH = "src/module.gleam";

export function main() {
  let a = 10;
  let b = 3;
  let c = 2;
  let $ = toBitArray([]);
  if (!((a + (b * c)) * 8 >= 0 && $.bitSize === (a + (b * c)) * 8)) {
    throw makeError(
      "let_assert",
      FILEPATH,
      "my/mod",
      6,
      "main",
      "Pattern match failed, no pattern matched the value.",
      { value: $, start: 56, end: 101, pattern_start: 67, pattern_end: 94 }
    )
  }
  return $;
}
